Fixed dark mode

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,16 +3,14 @@
 }
 
 // variables********
-$vh: 95vh;
-$vw: 97vw;
 $easing: cubic-bezier(0.8, 0.2, 0.2, 0.8);
 
-html {
+:root {
   --primary: #fffaf1;
   --secondary: #111;
 }
 
-html[data-theme='dark'] {
+.dark-theme {
   --primary: #000;
   --secondary: #fff6e5;
 }
@@ -51,55 +49,6 @@ html[data-theme='dark'] {
 // *****************dark mode**********
 
 
-input[type=checkbox]{
-height: 0;
-width: 0;
-visibility: hidden;
-}
-
-label {
-cursor: pointer;
-text-indent: -9999px;
-width: 50px;
-height: 26px;
-background: grey;
-float: right;
-border-radius: 100px;
-position: relative;
-}
-
-label:after {
-content: '';
-position: absolute;
-top: 3px;
-left: 4px;
-width: 20px;
-height: 19px;
-background: #fff;
-border-radius: 90px;
-transition: 0.3s;
-}
-
-input:checked + label {
-background: #110;
-}
-
-input:checked + label:after {
-left: calc(100% - 5px);
-transform: translateX(-100%);
-}
-
-label:active:after {
-width: 45px;
-}
-
-html.transition,
-html.transition *,
-html.transition *:before,
-html.transition *:after {
-transition: all 750ms !important;
-transition-delay: 0 !important;
-}
 
 //  body***********
 body {
@@ -158,7 +107,11 @@ body {
 
 }
 
-@media screen and (min-width: 400px) {
+@media screen and (max-width: 600px) {
+    
+    ::-webkit-scrollbar{
+      width: 0px;
+    }
     .nav-container {
         left: 20px;
         width: 100vw;
@@ -183,8 +136,8 @@ body {
 .ball-container {
   position: relative;
   margin: 18px 18px 18px 18px;
-  height: $vh;
-  width: $vw;
+  height:95vh ;
+  width: 97vw;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -262,8 +215,8 @@ body {
   background: var(--primary);
   backdrop-filter: blur(200px);
   position: relative;
-  width: $vw;
-  height: $vh;
+  width: 97vw;
+  height: 95vh;
   z-index: 2;
   border-radius:20px;
 }
